# QASource

./: .htaccess  CGI_SETUP_GUIDE.md  INSTALLATION.md  QUICK_START.md  README.md  Todo.php  api.cgi  cpanfile  debug_api.pl  globals.h  httpd.conf  index.php  server.pl  server_simple.pl  start_cgi.bat  taskflow.db  test_cgi.bat  test_create.pl  test_db.pl
BE_FastAPI/: requirements.txt  run.py  taskflow.db
BE_FastAPI/app/: main.py
BE_FastAPI/app/api/: __init__.py
BE_FastAPI/app/api/routes/: auth.py  dashboard.py  notifications.py  tasks.py  (+2 more)
BE_FastAPI/app/core/: config.py  database.py  security.py
BE_FastAPI/app/models/: project.py  task.py  user.py
BE_FastAPI/app/repositories/: project_repository.py  task_repository.py  user_repository.py
BE_FastAPI/app/schemas/: __init__.py  project.py  task.py  user.py
BE_FastAPI/app/services/: auth_service.py  project_service.py  task_service.py
CPP_UnitTest_New_tests/tests/: test_book.cpp
FE_React/: package.json
FE_React/public/: index.html
FE_React/src/: App.js
FE_React/src/components/: App.jsx  CreateAccount.jsx  CreateProject.jsx  CreateTask.jsx  Dashboard.jsx  Header.jsx  Login.jsx  LoginComponent.jsx  MainContent.jsx  NotificationsDropdown.jsx  ProjectDetails.jsx  ProjectView.jsx  Projects.jsx  Sidebar.jsx  TaskComponent.jsx  TaskFlow.jsx  Tasks.jsx  utils.js
LMS_UNIT_TEST/: CMakeLists.txt
LMS_UNIT_TEST/tests/: test_book.cpp  test_globals.cpp  test_library.cpp  test_main.cpp
Utils/: logger.php
cpp_tests/tests/: test_book.cpp
lib/Controller/CGI/: AuthController.pm  DashboardController.pm  NotificationController.pm  ProjectController.pm  TaskController.pm  TeamController.pm
lib/Service/: AuthService.pm  ProjectService.pm  TaskService.pm
lib/Utils/: Database.pm  JWT.pm
tests/: test_book.cpp  test_globals.cpp  test_library.cpp  test_main.cpp
tests/Source/: test_book.cpp  test_globals.cpp  test_library.cpp  test_main.cpp
unit_test_project_tests/: CMakeLists.txt
unit_test_project_tests/tests/: test_book.cpp
